--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +16,6 @@
     "http": "^0.0.1-security",
     "openai": "^4.83.0",
     "socket.io": "^4.8.1"
-  }
+  },
+  "description": ""
 }
