--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "openai": "^4.83.0",
-    "socket.io": "^4.8.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "description": ""
 }
